--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --primary-clr: rgb(7,24,196);
     --clr-white:#fff;
     --clr-dark:color: rgb(44, 44, 44);
-    --inward-size: 2.25em;
+    --inward-size: 1em;
 }
 body{
     background-color: var(--background-primary-clr);
@@ -22,16 +22,18 @@ header{
     height: 70px;
     position: fixed;
     z-index: 999;
+    inset: 0;
+    box-shadow: 0 1px 2px #dbdbdb;
 }
 nav{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 2em;
 }
 nav .search-bar{
     --size : 40px;
-    width: 100%;
+    min-width: var(--size);
     background-color: white;
     height: var(--size);
     padding: 5px;
@@ -57,6 +59,8 @@ nav .search-bar input{
     height: 100%;
     line-height: calc(var(--size) - 3px);
     width: calc(100% - var(--size));
+    z-index: -1;
+    outline: none;
 }
 nav .search-btn{
     font-size: 1.5em;
@@ -69,8 +73,16 @@ nav .search-btn{
     height: calc(var(--size)  - 10px);
     margin-left:auto;
 }
+.right_nav{
+    display: flex;
+    justify-content: space-between;
+}
 header nav .logo{
-    max-height: 3em;
+    background-image: url(/img/logo/logo.png);
+    background-position: center;
+    background-size: cover;
+    height: 2.5em;
+    width: 2.5em;
 }
 header nav .create{
     background-color: var(--primary-clr);
@@ -103,24 +115,26 @@ header nav .nav-pic-icon .profile{
     height: 10px;
 }
 .container{
-    display: grid;
-    grid-template-columns: 1fr; 
+    /* overflow: hidden; */
     position: relative;
     top: 100px;
-    overflow: hidden;
+    
 }
 .left-sider{
-    grid-row: 2;
+    background-color: var(--clr-white);
+    /* border-radius: 20px; */
+    border-top: 1px solid #dbdbdb;
     width: 100%;
     display: flex;
-    /* padding: 0 var(--inward-size); */
     position: fixed;
     bottom: 0;
+    left: 0;
+    right: 0;
     z-index: 998;
 }
 .left-sider .user{
     display: flex;
-    background-color: var(--clr-white);
+    
     padding: 1.2em;
 }
 .profile-nameAnduser-name{
@@ -132,7 +146,6 @@ header nav .nav-pic-icon .profile{
     border-radius: 100vh;
 }
 .left-sider .navigation{
-    background-color: var(--clr-white);
     flex-grow: 1;
     /* width: 100%; */
     padding: 1.2em;
@@ -173,13 +186,16 @@ header nav .nav-pic-icon .profile{
 }
 
 .main{
+     max-width: 610px;
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: center;
+    margin: var(--inward-size);
 }
 .main .storys{
     display: flex;
+    width: 100%;
     min-height: 252px;    
     justify-content: space-between;
     gap: 10px;
@@ -188,20 +204,23 @@ header nav .nav-pic-icon .profile{
 }
 
 .main .storys [class^="story"]{
-    width: 100px;
+    min-width: 100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     border-radius: 20px;
     border: 0;
     color: var(--clr-white);
+    position: relative;
+
+    /* padding: 0 30px; */
 }
 .main .storys [class^="story"] .story-profile{
     height: 40px;
-    width: 40px;
+    min-width: 40px;
     border: 1px solid var(--primary-clr);
     border-radius: 100vw;
-    position: relative;
+    position: absolute;
     top: 10px;
     left: 8px;
     z-index: 998;
@@ -210,6 +229,8 @@ header nav .nav-pic-icon .profile{
 }
 .main .storys [class^="story"] h4{
     text-align: center;
+    position: absolute;
+    bottom: 0;
     margin-bottom: 20px;
     margin-left: 5px;
     margin-right: 5px;
@@ -247,7 +268,7 @@ header nav .nav-pic-icon .profile{
     background-color: white;
     border-radius: 15px;
     padding: 5px 1.2em 1.5em;
-    width: 525px;
+    width: 100%;
 }
 .main .create-window .create-section .profile-img{
     max-width: 45px;
@@ -307,10 +328,10 @@ header nav .nav-pic-icon .profile{
 
 
 .card{
-    max-height: 600px;
+    /* max-height: 600px; */
     background-color: white;
     border-radius: 15px;
-    max-width: 525px;
+    width: 100%;
     padding: 16px;
 }
 .card .header-section{
@@ -332,7 +353,7 @@ header nav .nav-pic-icon .profile{
     justify-content: center;
 }
 .card .main_body .posted_pic{
-    max-width: 490px;
+    max-width: 100%;
     border-radius: 15px;
     margin-bottom: 15px;
 }
@@ -360,7 +381,7 @@ header nav .nav-pic-icon .profile{
     align-items: center;
     border-radius: 10px;
     background-color: var(--background-primary-clr);
-    width: 490PX;
+    width: 100%;
     height: 40px;
     padding: 8px;
     position: relative;
@@ -384,7 +405,7 @@ header nav .nav-pic-icon .profile{
 
 
 .right-sider{
-    max-width: 255px;
+    max-width: 300px;
     max-height: 650px;
     /* display: flex; */
     flex-direction: column;
@@ -439,24 +460,22 @@ header nav .nav-pic-icon .profile{
     
     }
     .left-sider{
-        grid-column: 1;
         flex-direction: column;
-        top: 100px;
-        left: 40px;
+        border-right: 1px solid #dbdbdb;
+        top: 70px;
+        left: 0px;
         width: 255px;
         gap: 7px;
     }
     .left-sider .user{
-        border-radius: 25px;
+        /* border-radius: 25px; */
         gap: 20px;
     }
     .left-sider .navigation {
         flex-direction: column;
-        border-radius: 25px;
+        /* border-radius: 25px; */
     }
-    .main{
-        grid-column: 2;
-    }
+    
 
     .left-sider .user .profile-nameAnduser-name{
         display: block;
@@ -470,24 +489,19 @@ header nav .nav-pic-icon .profile{
         
     }
     .container{
-        grid-template-columns: 255px 1fr 255px;
-        gap: 15px;
+        position: absolute;
+        left: 255px;
+
     }
-    .container .left-sider .navigation{
+    .left-sider .navigation{
        max-width: 255px;
-    }
-    .container .main{
-        grid-column: 2;
     }
     .left-sider .navigation .Search , .Settings{
         display: flex;
     }
     .right-sider{
         display: flex;
-        grid-column: 3;
-        position: sticky;
-        top: 0px;
-        right: 10px;
+
     }
 }
 @media (min-width: 1000px) and (max-width: 1220px) {
@@ -498,20 +512,24 @@ header nav .nav-pic-icon .profile{
     .left-sider{
         grid-column: 1;
         flex-direction: column;
-        top: 100px;
-        left: 40px;
+        border-right: 1px solid #dbdbdb;
+
+        top: 70px;
+        left: 0px;
         width: 255px;
         gap: 7px;
     }
-    .left-sider .user{
+    /* .left-sider .user{
         border-radius: 25px;
-    }
+    } */
     .left-sider .navigation {
         flex-direction: column;
-        border-radius: 25px;
+        /* border-radius: 25px; */
     }
     .main{
-        grid-column: 2;
+        position: absolute;
+        left: 255px;
+        
     }
 
     .left-sider .user .profile-nameAnduser-name{
@@ -523,16 +541,14 @@ header nav .nav-pic-icon .profile{
     .left-sider .user img{
         width: 50px;
         height: 50px;
+        margin-right: 20px;
         
     }
     .container{
-        grid-template-columns: 255px 1fr;
+        position: relative;
     }
-    .container .left-sider .navigation{
+    .left-sider .navigation{
        max-width: 255px;
-    }
-    .container .main{
-        grid-column: 2;
     }
     .left-sider .navigation .Search , .Settings{
         display: flex;
@@ -550,26 +566,27 @@ header nav .nav-pic-icon .profile{
     
     
     .container{
-        grid-template-columns: 80px 1fr;
-        grid-template-rows: 1fr
+        position: relative;
+        display: flex;
+        justify-content: center;
+        
     }
     .left-sider{
-        grid-column: 1;
         flex-direction: column;
-        top: 100px;
-        left: 40px;
+        border-right: 1px solid #dbdbdb;
+
+        top: 70px;
+        left: 0;
         width: 80px;
         gap: 7px;
-    }
-    .left-sider .user{
-        border-radius: 25px;
     }
     .left-sider .navigation {
         flex-direction: column;
         border-radius: 25px;
     }
     .main{
-        grid-column: 2;
+        position: absolute;
+        left: 90px;
     }
     .left-sider .navigation .Search , .Settings{
         display: flex;
@@ -581,14 +598,27 @@ header nav .nav-pic-icon .profile{
         display: none;
     }
 }
-@media (max-width:768px) {
+@media (min-width:768px) {
     header nav .search-bar{
-        min-width: var(--size); 
-        width: 0%;
+        width: 100%; 
+        /* width: 0%; */
         transition:  min-width 300ms ease-in-out 2000ms ;
     }
-    .search-bar input{
-        z-index: -1;
+    header nav .search-bar input{
+        z-index: 1;
+    }
+    .container{
+        display: flex;
+        justify-content: space-between;
+        gap: 80px;
+    }
+    header nav .logo{
+        background-image: url(/img/logo/logo-no-background.png);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 150px;
+
     }
     
 }
