--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
+/* font-family: 'Inter', sans-serif;
+font-family: 'Roboto', sans-serif; */
+*, ::after , ::before{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -14,196 +17,100 @@
 body{
     background-color: var(--background-primary-clr);
     color: var(--clr-dark);
+    font-family: 'Inter', sans-serif;
 }
-header{
+
+.logo{
+    background-image: url(/img/logo/logo-no-background.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 2.2em;
+    width: 12em;
+}
+header {
     background-color: var(--clr-white);
-    padding: 10px var(--inward-size);
-    width: 100%;
-    height: 70px;
+    min-height: 60px;
+    padding: 10px 0;
     position: fixed;
     z-index: 999;
-    inset: 0;
-    box-shadow: 0 1px 2px #dbdbdb;
-}
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2em;
-}
-nav .search-bar{
-    --size : 40px;
-    min-width: var(--size);
-    background-color: white;
-    height: var(--size);
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    position: relative;
-    border-radius: 50px;
-    overflow: hidden;
-    border: 1px solid rgba(7,24,196, 58%);
-    transition: width 500ms cubic-bezier(.18,.89,.32,1.15);
-    margin-right: 2em;
-    
-    
-}
-nav .search-bar input{
-    font-size: 1em;
-    padding: 0 1em;
-    border: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    height: 100%;
-    line-height: calc(var(--size) - 3px);
-    width: calc(100% - var(--size));
-    z-index: -1;
-    outline: none;
-}
-nav .search-btn{
-    font-size: 1.5em;
-    cursor: pointer;
-    border: 0;
-    background-color: transparent;
-    color: rgba(34, 34, 34, 0.6);
-    border-radius: 50%;
-    width: calc(var(--size) - 10px);
-    height: calc(var(--size)  - 10px);
-    margin-left:auto;
-}
-.right_nav{
-    display: flex;
-    justify-content: space-between;
-}
-header nav .logo{
-    background-image: url(/img/logo/logo.png);
-    background-position: center;
-    background-size: cover;
-    height: 2.5em;
-    width: 2.5em;
-}
-header nav .create{
-    background-color: var(--primary-clr);
-    color: var(--clr-white);
-    border: 0;
-    padding: 10px 30px;
-    border-radius: 15px;
-    font-weight: bold;
-    min-width: 170px;
-    display: none;
-    
-}
-header nav .nav-pic-icon .profile{
-    max-height: 50px;
-    border-radius: 50%;
-
-}
-.online{
-    position: relative;
-}
-.online::after{
-    content:'';
-    position: absolute;
-    bottom: 2px;
-    right: 0;
-    background-color: #41db51;
-    border-radius: 50%;
-    border: 2px solid var(--clr-white);
-    width: 10px;
-    height: 10px;
-}
-.container{
-    /* overflow: hidden; */
-    position: relative;
-    top: 100px;
-    
-}
-.left-sider{
-    background-color: var(--clr-white);
-    /* border-radius: 20px; */
-    border-top: 1px solid #dbdbdb;
     width: 100%;
+}
+header nav {
     display: flex;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 998;
-}
-.left-sider .user{
-    display: flex;
-    
-    padding: 1.2em;
-}
-.profile-nameAnduser-name{
-    display: none;
-}
-.left-sider .user img{
-    max-width: 40px;
-    max-height: 40px;
-    border-radius: 100vh;
-}
-.left-sider .navigation{
-    flex-grow: 1;
-    /* width: 100%; */
-    padding: 1.2em;
-    display: flex;
+    align-items: center;
     justify-content: space-between;
-    
+    padding: 0 20px;
 }
-.left-sider .navigation img{
-    max-height: 30px;
-    max-width: 30px;
-    margin-left: 2px;
-}
-.flex{
+header nav .header_right{
     display: flex;
-    gap: 20px;
     align-items: center;
-}
-.nav-property{
-    padding: 5px;
-    cursor: pointer;
-}
-.nav-property:nth-last-child(n + 2){
-    margin-bottom:1px ;
-}
-.nav-property:hover{
-    background-color: #fafafa;
-    border-radius: 30px;
-}
-.left-sider .navigation .Search , .Settings{
-    display: none;
-}
-/* .left-sider h3,.left-sider p{
-    display: block;
-} */
-
-.left-sider .navigation h3{
-    display: none;
-}
-
-.main{
-     max-width: 610px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    margin: var(--inward-size);
-}
-.main .storys{
-    display: flex;
-    width: 100%;
-    min-height: 252px;    
     justify-content: space-between;
     gap: 10px;
-    overflow-x: scroll;
-    
 }
-
-.main .storys [class^="story"]{
+header nav .header_right .search{
+    background-color: var(--background-primary-clr);
+    height: 35px;
+    border-radius: 8px;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+}
+header .header_right .search input{
+    border: 0;
+    background-color: transparent;
+    height: 100%;
+    padding-left: 10px;
+}
+.left_sider{
+    display: flex;
+    position: fixed;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #fff;
+    padding: 10px 0;
+    z-index: 999;
+    padding-left: 18px;
+}
+.left_sider .navigation{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+.left_sider .navigation h3{
+    font-weight:400;
+    font-size: 1em;
+    display: none;
+}
+.left_sider .navigation .user img{
+    border-radius: 100vh;
+}
+.icon{
+    height: 30px;
+    width: 30px;
+}
+#nav-search, #nav-msg, #nav-setting{
+    display: none;
+}
+.container{
+    position: relative;
+    top: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 20px;
+    gap: 10px;
+    /* max-width: 850px; */
+}
+.container .storys{
+    display: flex;
+    width: 100%;
+    min-height: 252px; 
+    gap: 10px;
+    overflow-x: scroll;
+}
+.container .storys [class^="story"]{
     min-width: 100px;
     display: flex;
     flex-direction: column;
@@ -213,9 +120,9 @@ header nav .nav-pic-icon .profile{
     color: var(--clr-white);
     position: relative;
 
-    /* padding: 0 30px; */
 }
-.main .storys [class^="story"] .story-profile{
+
+.container .storys [class^="story"] .story-profile{
     height: 40px;
     min-width: 40px;
     border: 1px solid var(--primary-clr);
@@ -224,16 +131,16 @@ header nav .nav-pic-icon .profile{
     top: 10px;
     left: 8px;
     z-index: 998;
-    
-    
+       
 }
-.main .storys [class^="story"] h4{
+.container .storys [class^="story"] h4{
     text-align: center;
     position: absolute;
     bottom: 0;
     margin-bottom: 20px;
     margin-left: 5px;
     margin-right: 5px;
+    
 }
 .story1{
     background-image: url(/img/photos-to-be-used/layer_copy.png);
@@ -241,29 +148,55 @@ header nav .nav-pic-icon .profile{
     background-size:contain;
     background-position: center;
     background-color: rgb(204, 232, 241);
+
 }
 .story2{
     background-image: url(/img/photos-to-be-used/status-1.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-color: gray;
+    background-blend-mode:multiply;
 }
 .story3{
     background-image: url(/img/photos-to-be-used/status-2.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-color: gray;
+    background-blend-mode:multiply;
+    
 }.story4{
     background-image: url(/img/photos-to-be-used/status-3.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-color: gray;
+    background-blend-mode:multiply;
 }.story5{
     background-image: url(/img/photos-to-be-used/status-4.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-color: gray;
+    background-blend-mode:multiply;
+}.story6{
+    background-image: url(/img/photos-to-be-used/biya2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: gray;
+    background-blend-mode:multiply;
 }
+.main{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 150px;
+    max-width: 750px;
+}
+
 .main .create-window{
     background-color: white;
     border-radius: 15px;
@@ -292,10 +225,15 @@ header nav .nav-pic-icon .profile{
      display: flex;
      justify-content: space-around;
 }
+.main .create-window .create-type h5{
+    font-weight: 300;
+    display: none;
+}
 .main .create-window .create-type [class*="-"]{
     display: flex;
     align-items: center;
     gap: 15px;
+    cursor: pointer;
 }
 .main .create-window .create-type img{
     max-width: 24px;
@@ -316,7 +254,9 @@ header nav .nav-pic-icon .profile{
     border: none;
     margin-left: .3em;
     height:90%;
-}.main .create-window .create-section .share button{
+    outline: none;
+}
+.main .create-window .create-section .share button{
     border: none;
     padding:3px 10px;
     border-radius:15px;
@@ -324,11 +264,8 @@ header nav .nav-pic-icon .profile{
     color: white;
 }
 
-
-
-
 .card{
-    /* max-height: 600px; */
+    
     background-color: white;
     border-radius: 15px;
     width: 100%;
@@ -343,6 +280,23 @@ header nav .nav-pic-icon .profile{
     display: flex;
     gap: 25px;
 }
+.card .header-section .post_identity h4{
+    text-transform: capitalize;
+
+}
+.card .header-section .post_identity p{
+    font-weight: 200;
+    font-size: 0.8em;
+}
+.card .header-section .card-btn{
+    border: 0;
+    padding: 10px;
+    font-size: 25px;
+    font-weight: 600;
+    color: gray;
+
+    background-color: transparent;
+}
 .card .header-section .post_identity .pro-pic{
     max-width: 45px;
     max-height: 45px;
@@ -354,7 +308,7 @@ header nav .nav-pic-icon .profile{
 }
 .card .main_body .posted_pic{
     max-width: 100%;
-    border-radius: 15px;
+    border-radius: 8px;
     margin-bottom: 15px;
 }
 .card .interactions img{
@@ -372,8 +326,13 @@ header nav .nav-pic-icon .profile{
 .card .about_post{
     margin-bottom: 10px;
 }
+.card .about_post h3{
+    font-size: 16px;
+}
 .card .about_post span{
-    font-weight: bold;
+    font-size: 14px;
+    font-weight: 650;
+    text-transform: capitalize;
 
 }
 .card .comment_section{
@@ -394,7 +353,7 @@ header nav .nav-pic-icon .profile{
     border: 0;
     width: 100%;
     outline: none;
-    font-size: 1   em;
+    font-size: 1em;
 }
 .card .comment_section img{
     max-width: 24px;
@@ -402,7 +361,17 @@ header nav .nav-pic-icon .profile{
     position: absolute;
     right: 15px;
 }
+.main .loading{
+    background-color: blue;
+    height: 100px;
+    width: 100%;
+    text-align: center;
+    color: white;
 
+}
+.nav-logo{
+    display: none;
+}
 
 .right-sider{
     max-width: 300px;
@@ -410,22 +379,35 @@ header nav .nav-pic-icon .profile{
     /* display: flex; */
     flex-direction: column;
     align-items: start;
-    gap: 7px;
+    gap: 15px;
     /* position: sticky;
     top: 100px; */
     background-color: white;
     padding: 20px;
     border-radius: 25px;
-    z-index: -1;
     display: none;
+}
+.right-sider [class^="request"]{
+    width: 100%;
+}
+.right-sider p{
+    font-weight: 200;
+    font-size: 0.8em;
+}
+.right-sider .share{
+    font-size: .9em;
 }
 .right-sider [class^="request"] [class*="profile-and-mutualFriends"]{
     display: flex;
     align-items: center;
     justify-content: start;
-    gap: 30px;
+    gap: 20px;
     width: 100%;
     margin-bottom: .5em;
+}
+.right-sider [class^="request"] h3{
+    font-size: 16px;
+
 }
 .right-sider [class^="request"] [class*="profile-and-mutualFriends"] img{
     width: 45px;
@@ -452,173 +434,84 @@ header nav .nav-pic-icon .profile{
     border: 1px solid var(--primary-clr);
     color: var(--primary-clr);
 }
-
-
-@media (min-width: 1220px) {
-    header nav .create{
-        display: block;
-    
+@media (min-width: 798px) {
+    header{
+        display: none;
     }
-    .left-sider{
+
+    .left_sider{
+        inset: 0;
+        width: 70px;
+        padding: 0;
+    }
+    .left_sider .navigation{
         flex-direction: column;
-        border-right: 1px solid #dbdbdb;
-        top: 70px;
-        left: 0px;
-        width: 255px;
-        gap: 7px;
-    }
-    .left-sider .user{
-        /* border-radius: 25px; */
-        gap: 20px;
-    }
-    .left-sider .navigation {
-        flex-direction: column;
-        /* border-radius: 25px; */
-    }
-    
-
-    .left-sider .user .profile-nameAnduser-name{
-        display: block;
-    }
-    .left-sider .navigation h3{
-        display: inline;
-    }
-    .left-sider .user img{
-        width: 50px;
-        height: 50px;
+        padding: 0 10px;
+        align-items: center;
         
     }
+    .logo-left-nav{
+        background-image: url(/img/logo/logo.png);
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 2.9em;
+        width: 50px;
+        margin: 20px 0 30px -2px;
+    }
+    #nav-search, #nav-msg, #nav-setting, .nav-logo{
+        display: block;
+    }
     .container{
-        position: absolute;
-        left: 255px;
-
+        margin-left: 80px;
+        top: 40px;
     }
-    .left-sider .navigation{
-       max-width: 255px;
+    .main .create-window .create-type h5{
+        display: inline;
     }
-    .left-sider .navigation .Search , .Settings{
+    
+}
+@media (min-width: 968px) {
+    .wrapper{
         display: flex;
+
     }
     .right-sider{
         display: flex;
-
     }
 }
-@media (min-width: 1000px) and (max-width: 1220px) {
-    header nav .create{
-        display: block;
-    
-    }
-    .left-sider{
-        grid-column: 1;
-        flex-direction: column;
-        border-right: 1px solid #dbdbdb;
-
-        top: 70px;
-        left: 0px;
-        width: 255px;
-        gap: 7px;
-    }
-    /* .left-sider .user{
-        border-radius: 25px;
-    } */
-    .left-sider .navigation {
-        flex-direction: column;
-        /* border-radius: 25px; */
-    }
-    .main{
-        position: absolute;
-        left: 255px;
-        
-    }
-
-    .left-sider .user .profile-nameAnduser-name{
-        display: block;
-    }
-    .left-sider .navigation h3{
-        display: inline;
-    }
-    .left-sider .user img{
-        width: 50px;
-        height: 50px;
-        margin-right: 20px;
-        
+@media (min-width: 1168px) {
+    .wrapper{
+        margin-right: 50px;
     }
     .container{
-        position: relative;
+        margin-left: 255px;
+        top: 40px;
     }
-    .left-sider .navigation{
-       max-width: 255px;
+    .left_sider{
+        width: 245px;
     }
-    .left-sider .navigation .Search , .Settings{
-        display: flex;
-    }
-    
-}
-
-
-@media  (min-width: 968px) and (max-width: 1000px) {
-   
-    header nav .create{
+    .left_sider .navigation h3{
         display: block;
-    
     }
-    
-    
-    .container{
-        position: relative;
+    .nav-property{
+        width: 100%;
         display: flex;
-        justify-content: center;
-        
+        align-items: center;
+        gap: 20px;
     }
-    .left-sider{
-        flex-direction: column;
-        border-right: 1px solid #dbdbdb;
-
-        top: 70px;
-        left: 0;
-        width: 80px;
-        gap: 7px;
-    }
-    .left-sider .navigation {
-        flex-direction: column;
-        border-radius: 25px;
-    }
-    .main{
-        position: absolute;
-        left: 90px;
-    }
-    .left-sider .navigation .Search , .Settings{
-        display: flex;
-    }
-    .left-sider .navigation h3{
-        display: none;
-    }
-    .left-sider .user .profile-nameAnduser-name{
-        display: none;
-    }
-}
-@media (min-width:768px) {
-    header nav .search-bar{
-        width: 100%; 
-        /* width: 0%; */
-        transition:  min-width 300ms ease-in-out 2000ms ;
-    }
-    header nav .search-bar input{
-        z-index: 1;
-    }
-    .container{
-        display: flex;
-        justify-content: space-between;
-        gap: 80px;
-    }
-    header nav .logo{
+    .logo-left-nav{
         background-image: url(/img/logo/logo-no-background.png);
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        width: 150px;
-
+        background-size: cover;
+        width: 190px;
+        margin: 20px 0 30px -20px;
+    }
+    #nav-search, #nav-msg, #nav-setting, .nav-logo{
+        display: flex;
+        gap: 20px;
+    }
+    .right-sider{
+        margin-top: 40px;
     }
     
 }
