--- a/css/signUp.css
+++ b/css/signUp.css
@@ -157,7 +157,7 @@ header nav .login .btn{
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
 }
 .form .name{
     display: flex;
@@ -233,6 +233,7 @@ header nav .login .btn{
     gap: 10px;
     width: 100%;
     outline: none;
+    position: relative;
 }
 .form .email_password .email{
     padding: 0 15px;
@@ -248,6 +249,7 @@ header nav .login .btn{
 .form .signUp{
     display: flex;
     justify-content: center;
+    padding: 5px;
 }
 .form .signupBtn{
     background-color: var(--primary-clr);
@@ -260,9 +262,7 @@ header nav .login .btn{
     font-size: 1.08em;
 }
 
-.hide{
-    display: none;
-}
+
 .login_section{
     display: flex;
     flex-direction: column;
@@ -273,20 +273,28 @@ header nav .login .btn{
 .login-form{
     width: 400px;
     background-color: var(--clr-white);
-    border-radius: 50px;
+    border-radius: 10px;
     padding: 20px 24px;
     margin-left: 30px;
-    box-shadow: 0 4px 15px gray;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, .2);
+    
+}
+.eyetoggle{
+    color: #958F8F;
+    position: absolute;
+    cursor: pointer;
+    font-size: .9em;
     
 }
 .login-form .login{
-
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 .login-form .login .btn{
+    cursor: pointer;
     padding: 0 16px;
     background-color: var(--primary-clr);
     border-radius: 8px;
@@ -326,7 +334,7 @@ header nav .login .btn{
 }
 .createNew{
     text-align: center;
-    margin-top: 20px;
+    padding-top: 20px;
 }
 .createNew .create_new{
     border: none;
@@ -356,7 +364,7 @@ header nav .login .btn{
     
 }
 .form_section{
-    backdrop-filter: opacity(10%);
+    
     background-color: rgb(240, 237, 245 , 85%);
     width: 100%;
     height: 100vh;
@@ -364,20 +372,41 @@ header nav .login .btn{
     justify-content: center;
     align-items: center;
     position: absolute;
-    display: none;
 
 }
 .form{
-    max-height: 535px;
+    /* max-height: 535px; */
+    position: relative;
     max-width: 450px;
     padding: 30px 17px;
-    border-radius: 50px;
+    border-radius: 10px;
     background-color: var(--clr-white);
     box-shadow: 0 2px 8px rgb(146, 146, 146);
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
+.form .close{
+    position: absolute;
+    top: 30px;
+    right: 35px;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+.eye-login{
+    top: 95px;
+    right: 15px;
+}
+.eye-signUp{
+    top: 65px;
+    right: 15px;
+}
     
 
 
+
+
+
+.hide{
+    display: none;
+}
