--- a/css/explore.css
+++ b/css/explore.css
@@ -1,247 +1,152 @@
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
-    /* font-family: 'Inter', sans-serif;
-font-family: 'Roboto', sans-serif; */
+   .container{
+    margin: 0px;
+   }
+   .grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 2px;
+    width: 100%;
+    height: 100vh;
+   } 
+   .images, .video{
+    color: var(--clr-white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
     
-    *,
-     ::after,
-     ::before {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    
-     :root {
-        --background-primary-clr: rgb(240, 237, 245);
-        --background-dark-clr: rgb(35, 38, 46);
-        --primary-clr: rgb(7, 24, 196);
-        --clr-white: #fff;
-        --clr-dark: color: rgb(44, 44, 44);
-        --inward-size: 1em;
-    }
-    
-    body {
-        background-color: var(--background-primary-clr);
-        color: var(--clr-dark);
-        font-family: 'Inter', sans-serif;
-    }
-    
-    .logo {
-        background-image: url(/img/logo/logo-no-background.png);
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
-        height: 2.2em;
-        width: 12em;
-    }
-    
-    header {
-        background-color: var(--clr-white);
-        min-height: 60px;
-        padding: 10px 0;
-        position: fixed;
-        z-index: 999;
-        width: 100%;
-    }
-    
-    header nav {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 20px;
-    }
-    
-    header nav .header_right {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 10px;
-    }
-    
-    header nav .header_right .search {
-        background-color: var(--background-primary-clr);
-        height: 35px;
-        border-radius: 8px;
-        padding: 0 10px;
-        display: flex;
-        align-items: center;
-    }
-    
-    header .header_right .search input {
-        border: 0;
-        background-color: transparent;
-        height: 100%;
-        padding-left: 10px;
-    }
-    
-    .left_sider {
-        display: flex;
-        position: fixed;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        background-color: #fff;
-        padding: 10px 0;
-        z-index: 999;
-        padding-left: 18px;
-    }
-    
-    .left_sider .navigation {
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
-    }
-    
-    .left_sider .navigation h3 {
-        font-weight: 400;
-        font-size: 1em;
+   }
+   .commentAndlike i{ 
         display: none;
-    }
-    
-    .left_sider .navigation .user img {
-        border-radius: 100vh;
-    }
-    
-    .icon {
-        height: 30px;
+        color: var(--clr-white);
         width: 30px;
-    }
+        height: 30px;
+   }
+   .images:hover, .video:hover{
+        background-color: rgba(0, 0, 0, 0.226);
+       background-blend-mode: color-burn;
+
+   }
+   .images:hover .commentAndlike i, .video:hover .commentAndlike i{
+    display: block;
+   }
+   .images[data-index="1"]{
+    background-image: url(/img/photos-to-be-used/cheetah.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 1;
+    grid-row: 1;
+   }
+   .images[data-index="2"]{
+    background-image: url(/img/photos-to-be-used/image3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 2;
+    grid-row: 1;
+   }
+   .images[data-index="3"]{
+    background-image: url(/img/photos-to-be-used/image5.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 1;
+    grid-row: 2;
+   }
+   .images[data-index="4"]{
+    background-image: url(/img/photos-to-be-used/member-6.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 2;
+    grid-row: 2;
+   }
+   .images[data-index="5"]{
+    background-image: url(/img/photos-to-be-used/member-1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 2;
+    grid-row: 3;
+   }
+   .video[data-index="1"]{
+    background-image: url(/img/photos-to-be-used/biya1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 3;
+    grid-row: span 2;
+   }
+   .video[data-index="2"]{
+    background-image: url(/img/photos-to-be-used/cheetah.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 1;
+    grid-row: span 2;
+   }
+   
+
+   .images[data-index="6"]{
+    background-image: url(/img/photos-to-be-used/dogs.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     
-    #nav-search,
-    #nav-msg,
-    #nav-setting {
-        display: none;
-    }
+    grid-column: 3;
+    grid-row: 3;
+   }
+   .images[data-index="7"]{
+    background-image: url(/img/photos-to-be-used/photo2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     
-    @media (min-width: 798px) {
-        header {
-            display: none;
-        }
-        .left_sider {
-            inset: 0;
-            width: 70px;
-            padding: 0;
-        }
-        .left_sider .navigation {
-            flex-direction: column;
-            padding: 0 10px;
-            align-items: center;
-        }
-        .logo-left-nav {
-            background-image: url(/img/logo/logo.png);
-            background-position: center;
-            background-size: contain;
-            background-repeat: no-repeat;
-            height: 2.9em;
-            width: 50px;
-            margin: 20px 0 30px -2px;
-        }
-        #nav-search,
-        #nav-msg,
-        #nav-setting,
-        .nav-logo {
-            display: block;
-        }
-        .container {
-            margin-left: 80px;
-            top: 40px;
-        }
-        .main .create-window .create-type h5 {
-            display: inline;
-        }
-    }
+    grid-column: 2;
+    grid-row: 4;
+   }
+   .images[data-index="8"]{
+    background-image: url(/img/photos-to-be-used/cover.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 3;
+    grid-row: 4;
+   }
+   .margin100{
+    margin-top: 100px;
+   }
+   @media (min-width: 798px) {
     
-    .explore-image1 {
-        width: 50px;
-        height: 50px;
+    .container{
+        margin-left: 80px;
+        top: 40px;
+        padding: 0px  40px;
     }
+
     
-    .explore-image1 {
-        grid-area: image1;
+}
+@media (min-width: 1168px) {
+    .wrapper{
+        margin-right: 50px;
+        
     }
+    .container{
+        margin-left: 255px;
+        
+    }
+    .grid{
+        
+        height: 150vh;
+        
+    }
+}
+@media (min-width: 968px) {
     
-    .explore-image2 {
-        grid-area: image2;
+    .container{
+        width: 100%;
+        height: 100%;
     }
-    
-    .explore-image3 {
-        grid-area: image3;
-    }
-    
-    .explore-image4 {
-        grid-area: image4;
-    }
-    
-    .explore-image5 {
-        grid-area: image5;
-    }
-    
-    .explore-image6 {
-        grid-area: image6;
-    }
-    
-    .explore-image7 {
-        grid-area: image7;
-    }
-    
-    .explore-image8 {
-        grid-area: image8;
-    }
-    
-    .explore-photos {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        gap: 5px;
-        grid-template-areas: 'image1 image2 image3''image4 image5 image6''image7 image8 image9';
-        padding-left: 150px;
-        padding-right: 150px;
-        background-color: var(--clr-white);
-    }
-    /* .explore-photos:hover {
-        background-color: white;
-        opacity: 0.9;
-    } */
-    
-    @media (min-width: 968px) {
-        .wrapper {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
-            grid-template-areas: 'image1 image2 image3''image4 image5 image3''image7 image8 image9';
-        }
-    }
-    
-    @media (min-width: 1168px) {
-        .wrapper {
-            margin-right: 50px;
-        }
-        .container {
-            margin-left: 255px;
-            top: 40px;
-        }
-        .left_sider {
-            width: 245px;
-        }
-        .left_sider .navigation h3 {
-            display: block;
-        }
-        .nav-property {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-        .logo-left-nav {
-            background-image: url(/img/logo/logo-no-background.png);
-            background-size: cover;
-            width: 190px;
-            margin: 20px 0 30px -20px;
-        }
-        #nav-search,
-        #nav-msg,
-        #nav-setting,
-        .nav-logo {
-            display: flex;
-            gap: 20px;
-        }
-    }
+}
